fix scrollbar portfolio

--- a/style/style.css
+++ b/style/style.css
@@ -950,6 +950,10 @@ div.button-container {
     .timeline-card-svg {
         display: none;
     }
+
+    button#right, button#left {
+        display: none;
+    }
 }
 
 @media screen and (min-width:577px) and (max-width: 768px) {}
@@ -1114,6 +1118,10 @@ div.button-container {
     }
 
     .timeline-card-svg {
+        display: none;
+    }
+
+    button#right, button#left {
         display: none;
     }
 }
